--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.1.3",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
     "next": "12.3.1",
