--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mobx-react-lite": "^3.4.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-lottie-player": "^1.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
