--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.10.6",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.1.3",
+    "firebase": "^9.13.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
     "next": "12.3.1",
