--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^9.13.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
+    "moment": "^2.29.4",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
